--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,8 +12,8 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v2/', 'dockerhub') {
-       def app = docker.build("wardviaene/docker-nodejs-demo:${commit_id}", '.').push()
+     docker.withRegistry('https://hub.docker.com/repositories/manisha1995vash/jenkinsdemo', 'dockerhub') {
+       def app = docker.build("manisha1995vash/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
 }
